# BikeGuard

./: .gitignore  CMakeCache.txt  CMakeLists.txt  README.md  WINDOWS_DEVELOPMENT.md  index.html  protocol.html  stack.html  updates.html  vcpkg.json
css/: global.css  index.css  protocol.css  stack.css  updates.css
include/: alpr_engine.hpp  bikeguard_core.hpp  bikeguard_engine.hpp  bikeguard_road_engine.hpp  calibration_manager.hpp  live_streamer.hpp  rider_density_analyzer.hpp  telemetry_dispatcher.hpp  trajectory_analyzer.hpp
js/: global.js  terminal.js  updates.js  vision.js
scripts/: build_windows.bat  setup_vcpkg.bat
src/: hardware_abstraction.cpp  inference_engine.cpp  main.cpp
src/analysis/: alpr_engine.cpp  rider_density_analyzer.cpp  trajectory_analyzer.cpp
src/calibration/: calibration_manager.cpp
src/core/: bikeguard_engine.cpp
src/platform/: msmf_camera.cpp
src/qa/: edge_case_validator.cpp  road_test_suite.cpp
src/road/: baron_calibration.cpp  bikeguard_road_engine.cpp  enhanced_vibration_filter.cpp  hardware_manager.cpp  indian_road_preprocessor.cpp  pillion_detector.cpp  telemetry_logger.cpp
src/telemetry/: live_streamer.cpp  telemetry_dispatcher.cpp
src/utils/: fft_vibration_filter.cpp  performance_benchmark.cpp  windows_utils.cpp
